first commit fitur 1

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Second Commit</h1>
+    <h1>Fitur 1</h1>
+    <button>fitur 1</button>
   </body>
 </html>
