--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
   <body>
     <h1>Fitur 1</h1>
     <button>fitur 1</button>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde esse
+      dolores incidunt iure sint a dolorum, necessitatibus accusantium delectus
+      excepturi aliquam natus qui, rem corrupti facere architecto velit omnis
+      soluta!
+    </p>
   </body>
 </html>
