first commit in fitur3

--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>Fitur 1</h1>
-    <button>fitur 1</button>
+    <h1>Fitur 3</h1>
+    <button>fitur 3</button>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde esse
       dolores incidunt iure sint a dolorum, necessitatibus accusantium delectus
       excepturi aliquam natus qui, rem corrupti facere architecto velit omnis
       soluta!
     </p>
+    <div>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque harum
+        voluptatibus quis nam quia cumque atque ex ipsum fugiat quibusdam,
+        tempore quasi libero, maiores modi accusamus architecto iure, impedit a.
+      </p>
+    </div>
   </body>
 </html>
