menambahkan tag img

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
       excepturi aliquam natus qui, rem corrupti facere architecto velit omnis
       soluta!
     </p>
+    <img src="" alt="">
   </body>
 </html>
