third commit in fitur3

--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
     <div>
       <p>melanjutkan pengembangan setelah fetch dan merge dari branch main</p>
     </div>
+    <div>
+      <p>third commit in fitur3</p>
+    </div>
   </body>
 </html>
