salah paham revert - sixth commit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       excepturi aliquam natus qui, rem corrupti facere architecto velit omnis
       soluta!
     </p>
-    <img src="" alt="">
+    <img src="" alt="" />
     <div>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque harum
